# AD_Employee

./: .dockerignore  .ex.env  .gitignore  Dockerfile  README.md  adiwa_db.bak  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  user.txt
ADIWA/: ad_conn.py  asgi.py  settings.py  urls.py  wsgi.py
INIT_SERVERS/: cleanup.sh  docker-compose.yml  init-ad.sh  init-db.sh  start.sh
SCRIPTS/: run.py
SERVERS_DOCKER/: cleanup.sh  init-ad.sh  init-db.sh  start-ad.sh  start-db.sh  start.sh  test.sh
ad-test-conn/: run.py
core/: ad_conn.py  admin.py  auth_backends.py  forms.py  models.py  serializers.py  tests.py  utils.py  views.py
core/management/commands/: create_default_superuser.py
core/migrations/: 0001_initial.py  0002_alter_user_table.py
employee/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
employee/migrations/: 0001_initial.py  0002_seed_departments.py  0003_alter_department_table_alter_employee_table_and_more.py  0004_outransferlog.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: base.html  index.html
frontend/templates/admin/: change_ad_password.html  create_ad_user.html  delete_ad_user.html  index.html  transfer_ou.html
frontend/templates/admin/core/user/: change_form.html  change_list.html
templates/admin/: index.html  transfer_ou.html
