[project]
name = "ad-employee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django~=5.2",
    "django-jazzmin>=3.0.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "ldap3>=2.9.1",
    "mssql-django>=1.6",
    "pyodbc>=5.3.0",
]
